mise à jour training semantic master class

--- a/SemanticInteroperability.html
+++ b/SemanticInteroperability.html
@@ -260,19 +260,18 @@
                                 <section>
                                     <h3>Objectifs de la session</h3>
                                     <ul>
-                                        <li>Comprendre les bases de la sémantique</li>
-                                        <li>Explorer les concepts d’interopérabilité</li>
-                                        <li>Découvrir l’usage d’OWL et des ontologies</li>
-                                        <li>Appréhender les ontologies de haut niveau et leur rôle</li>
+                                        <li>Comprendre les bases de la sémantique et des ontologies</li>
+                                        <li>Modéliser en OWL une logique de description</li>
+                                        <li>Voir en quoi cela contribue à l'établissement de l'interopérabilité sémantique</li>
+                                       
                                     </ul>
                                 </section>
                                 <section>
                                     <h3>Plan de la masterclass</h3>
                                     <ol>
                                         <li>Introduction à la sémantique</li>
-                                        <li>A propos du langage pour les Ontologies du Web</li>
-                                        <li>Concepts d’interopérabilité</li>
-                                        <li>Construire l'interopérabilité sémantique avec OWL</li>
+                                        <li>Modélisation sémantique avec OWL</li>
+                                        <li>Conclusion</li>
 
                                         </ul>
                                 </section>
