--- a/SemanticInteroperability.html
+++ b/SemanticInteroperability.html
@@ -342,7 +342,7 @@
                                 <section>
                                     <div class="title-zone">
                                         <p style="font-size: 0.6em;">De la sémiotique à la rhétorique</p>
-                                        <h3 style="font-size: 0.8em;">La sémantique</h3>
+                                        <h3 style="font-size: 0.8em;">La sémantique(2)</h3>
                                     </div>
                                     <div class="content-zone">
                                         <div class="text-zone">
