mise à jour training semantic master class

--- a/SemanticInteroperability.html
+++ b/SemanticInteroperability.html
@@ -2506,8 +2506,8 @@
                                                 les produits, prix ou transactions.</p>
                                         </div>
                                         <div class="image-zone">
-                                            <img src="./img/AlignementSémantiqueApriori.png"
-                                                alt="Alignement Conceptualisation"
+                                            <img src="./img/AlignementSemantiqueApriori.png"
+                                                alt="Alignement Sémantique à priori"
                                                 style="max-width: 100%; height: auto;" />
                                         </div>
                                     </div>
@@ -2537,7 +2537,7 @@
                                                 l’autre, en utilisant une ontologie pivot défini par GS1</p>
                                         </div>
                                         <div class="image-zone">
-                                            <img src="./img/AlignementSémantiqueAPosteriroi.png" alt="Alignement à postériori"
+                                            <img src="./img/AlignementSemantiqueAPosteriori.png" alt="Alignement à postériori"
                                                 style="max-width: 100%; height: auto;" />
                                         </div>
                                     </div>
