mise à jour training semantic master class

--- a/SemanticInteroperability.html
+++ b/SemanticInteroperability.html
@@ -580,8 +580,7 @@
                                             <ol style="font-size: 0.45em;">
                                                 <li>Ressource Digitale <- Référent</li>
                                                 <li>Code ASCII <- de forme symbolique(terme)</li>
-                                                <li>Représentation formelle et digitale <- de graphe de concepts
-                                                </li>
+                                                <li>Représentation formelle et digitale <- de graphe de concepts </li>
                                             </ol>
                                             <br>
                                             <p style="font-size: 0.5em;text-align: left;">Pour la forme, on a des
@@ -1115,24 +1114,25 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.6em;">D.1 Définition</h3>
+                                        <h3 style="font-size: 0.8em;">D.1 Définition</h3>
                                     </div>
                                     <div class="content-zone">
                                         <div class="text-zone">
-                                            <ul style="font-size: 0.4em;">
-                                                <li>L'Ontologie est une discipline phylosophique</li>
-                                                <li>Les ontologies sont des modèles formels de domaines de connaissance
-                                                </li>
-                                            </ul>
-
+                                            <p style="text-align: left;">
+                                                L'ontologie est une branche de la philosophie qui étudie la nature
+                                                de l'être, de l'existence et de la réalité.
+                                            </p>
+                                            <p style="text-align: left;">En informatique, une ontologie est une
+                                                représentation formelle et
+                                                structurée de la connaissance dans un domaine spécifique, comprenant un
+                                                ensemble de concepts et les relations entre eux.</p>
                                         </div>
-
                                     </div>
                                 </section>
 
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.6em;">D.2 L'Ontologie</h3>
+                                        <h3 style="font-size: 0.8em;">D.2 L'Ontologie</h3>
                                         <p>L'ontologie n'est pas nouvelle et précède l'ère informatique</p>
                                     </div>
                                     <div class="content-zone">
@@ -1278,7 +1278,7 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.8em;">Quelle logique?</h3>
+                                        <h3 style="font-size: 0.8em;">D.6 Quelle logique?</h3>
                                     </div>
                                     <div style="display: flex; gap: 20px;">
                                         <div style="font-size: 0.8em;">
@@ -1301,7 +1301,7 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.8em;">D3.4 Quels langages?</h3>
+                                        <h3 style="font-size: 0.8em;">D.7 Quels langages?</h3>
                                     </div>
                                     <div style="display: flex; gap: 20px;text-align: left;">
                                         <div style="font-size: 0.8em;">
@@ -1347,14 +1347,13 @@
                                                         <li>Théorie des ensembles: Opérateurs Logiques : AND et OR</li>
                                                         <li>Théorie des ensembles: définition Extensive des Ensembles
                                                         </li>
+                                                        <li>Monde ouvert et monde fermé</li>
                                                         <li>Logique d'ordre supérieur</li>
                                                         <li>Logique floue</li>
-                                                        <li>Monde ouvert et monde fermé</li>
                                                     </ol>
                                                     <p style="text-align: left;">On peut dès lors appliquer ce que l'on
                                                         a appris et expérimenter la modélisation d'ontologie en OWL avec
                                                         le logiciel Protégé ></p>
-
                                                     </ol>
 
                                 </section>
@@ -1660,10 +1659,56 @@
                                         </div>
                                     </div>
                                 </section>
+                                <section>
+                                    <div class="title-zone">
+                                        <h3 style="font-size: 0.8em;">E.10 Monde Ouvert et Monde Fermé</h3>
+                                    </div>
+                                    <p style="font-size: 0.6em;text-align: left;">Les notions de monde ouvert et monde
+                                        fermé sont des concepts fondamentaux dans la
+                                        gestion de la logique et des connaissances en informatique, notamment dans les
+                                        systèmes basés sur les ontologies et les bases de données. </p>
+                                    <p style="font-size: 0.6em;text-align: left;">Monde Ouvert (Open World Assumption -
+                                        OWA): tout ce qui n’est pas explicitement connu comme vrai est considéré
+                                        comme inconnu (et non pas comme faux).</p>
+                                    <p style="font-size: 0.6em;text-align: left;">Monde Fermé (Closed World Assumption -
+                                        CWA): Tout ce qui n’est pas explicitement connu comme vrai est considéré
+                                        comme faux.</p>
+                                    <table style="font-size: 0.6em;">
+                                        <thead>
+                                            <tr>
+                                                <th>Aspect</th>
+                                                <th>Monde Ouvert (OWA)</th>
+                                                <th>Monde Fermé (CWA)</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td><strong>Connaissance</strong></td>
+                                                <td>Incomplète et extensible</td>
+                                                <td>Complète et exhaustive</td>
+                                            </tr>
+                                            <tr>
+                                                <td><strong>Interprétation</strong></td>
+                                                <td>Absence = Inconnu</td>
+                                                <td>Absence = Faux</td>
+                                            </tr>
+                                            <tr>
+                                                <td><strong>Usage</strong></td>
+                                                <td>Ontologies, Web sémantique</td>
+                                                <td>Bases de données</td>
+                                            </tr>
+                                            <tr>
+                                                <td><strong>Exemple</strong></td>
+                                                <td>Nicolas peut avoir une maison (inconnu)</td>
+                                                <td>Nicolas n’a pas de maison (faux)</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </section>
 
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.8em;">E.10 Logique d'ordre supérieur</h3>
+                                        <h3 style="font-size: 0.8em;">E.11 Logique d'ordre supérieur</h3>
                                     </div>
                                     <div style="display: flex; gap: 20px;">
                                         <div style="font-size: 0.8em;">
@@ -1700,10 +1745,9 @@
                                     </div>
                                 </section>
 
-
                                 <section>
                                     <div class="title-zone">
-                                        <h3 style="font-size: 0.8em;">E.11 Logique floue</h3>
+                                        <h3 style="font-size: 0.8em;">E.12 Logique floue</h3>
                                     </div>
                                     <div style="display: flex; gap: 20px;">
                                         <div style="font-size: 0.8em;">
@@ -1777,7 +1821,9 @@
                                         <li>basé sur la logique de description et la théorie des ensembles</li>
                                         <li>utilisé pour modéliser des connaissances complexes</li>
                                         <li>adapté pour fédérer les ontologies de plusieurs domaines</li>
-                                        <li>supporter par de nombreux outils, en particulier Protégé</li>
+                                        <li>supporté par de nombreux outils, en particulier Protégé</li>
+                                        <li>supporté par des moteurs de raisonnement avec l'hypothèse d'un monde ouvert</li>
+            
                                     </ul>
                                 </section>
 
@@ -2030,7 +2076,8 @@
                                                     </td>
                                                     <td style="padding: 8px; border-right: 1px solid #ccc;">Tous les
                                                         éléments satisfont la relation spécifiée.</td>
-                                                    <td style="padding: 8px;">∀ hasParent.Person (ex. : "tout individu ayant un parent qui soit une personne.")</td>
+                                                    <td style="padding: 8px;">∀ hasParent.Person (ex. : "tout individu
+                                                        ayant un parent qui soit une personne.")</td>
                                                 </tr>
                                                 <tr style="border-bottom: 1px solid #ccc; height: 20px;">
                                                     <td style="padding: 4px; border-right: 1px solid #ccc;"> NOT (¬)
@@ -3325,7 +3372,7 @@
                                     </ol>
                                 </section>
                                 <section>
-                                    <h1 style="font-size: 1.2em;text-align: center;">H.1 Résumé des points clés</h1>
+                                    <h1 style="font-size: 0.8em;">H.1 Résumé des points clés</h1>
 
                                     <p style="font-size: 0.5em;text-align: left;">Pour pouvoir construire
                                         l'interopérabilité sémantique, nous avons</p>
@@ -3340,7 +3387,7 @@
                                     </ul>
                                 </section>
                                 <section>
-                                    <h2 style="font-size: 1.2em;text-align: center;">H.2 Perspectives</h2>
+                                    <h2 style="font-size: 0.8em;">H.2 Perspectives</h2>
 
                                     <p style="font-size: 0.5em;text-align: left;">Nous nous sommes restreints aux
                                         aspects sémantiques sans détailler les aspects informatiques et la
