mise à jour training semantic master class

--- a/SemanticInteroperability.html
+++ b/SemanticInteroperability.html
@@ -1787,9 +1787,6 @@
                                 <section>
                                     <ol style=" list-style-type:none; ">
                                         <li style=" counter-reset: main 5;">Modélisation sémantique avec OWL
-
-                                            <p style="text-align: left;">Explorons OWL au travers de Protégé et la
-                                                syntaxe Manchester v</p>
                                             <ol>
                                                 <li>Qu'est-ce que OWL?</li>
                                                 <li>Le logiciel Protégé</li>
@@ -1806,9 +1803,9 @@
                                                 <li>Protégé: redondance de données et RDF</li>
                                                 <li>Validation: cohérence et validité</li>
                                         </li>
-                                        <p style="text-align: right;">Nous sommes prêt à construire l'intéropérabilité
-                                            sémantique ></p>
                                     </ol>
+                                    <p style="text-align: right;">Nous sommes prêt à construire l'intéropérabilité
+                                        sémantique ></p>
                                 </section>
 
                                 <section>
@@ -2001,13 +1998,9 @@
                                 </section>
                                 <section>
                                     <div class=" title-zone" style="font-size: 1em;">
-                                        <h2 style="font-size: 1em;">F.5 Constructions du langage OWL</h2>
-                                    </div>
-                                    <p style="font-size: 0.8em;">OWL (Ontology Web Language)</p>
-                                </section>
-                                <section>
-                                    <h3 style="font-size: 0.7em;">Tableau des construction du langage OWL
-                                    </h3>
+                                        <h3 style="font-size: 0.8em;">F.5 Constructions du langage OWL</h3>
+                                    <P style="font-size: 0.7em;">Tableau des construction du langage OWL
+                                    </p>
                                     <div class="scrollable-table">
                                         <table style="width: 100%; border-collapse: collapse; font-size: 0.5em;">
                                             <thead>
@@ -2180,8 +2173,7 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <p style="font-size: 0.6em;">Construction du langage OWL</p>
-                                        <h3 style="font-size: 0.8em;">F.8 Les Propriétés OWL</h3>
+                                        <h3 style="font-size: 0.8em;">F.7 Les Propriétés OWL</h3>
                                     </div>
                                     <div class="content-zone">
                                         <div class="text-zone" style="font-size: 0.7em;">
@@ -2277,7 +2269,7 @@
                                 <section>
                                     <div class="title-zone">
 
-                                        <h3 style="font-size: 0.8em;">F.9 Équivalence et Subsomption avec OWL</h3>
+                                        <h3 style="font-size: 0.8em;">F.8 Équivalence et Subsomption avec OWL</h3>
                                     </div>
                                     <div class="content-zone">
                                         <div class="text-zone">
@@ -2367,7 +2359,7 @@
                                 <section>
                                     <div class="title-zone">
 
-                                        <h3 style="font-size: 0.8em;">F.10 Principe des Contraintes Induites par des
+                                        <h3 style="font-size: 0.8em;">F.9 Principe des Contraintes Induites par des
                                             relations</h3>
                                     </div>
                                     <div class="content-zone">
@@ -2396,7 +2388,7 @@
                                 <section>
                                     <div class="title-zone">
 
-                                        <h3 style="font-size: 0.8em;">F.11 Individus : Typage, Identité et Propriétés
+                                        <h3 style="font-size: 0.8em;">F.10 Individus : Typage, Identité et Propriétés
                                         </h3>
                                     </div>
                                     <div class="content-zone">
@@ -2466,7 +2458,7 @@
                                 <section>
                                     <div class="title-zone">
 
-                                        <h3 style="font-size: 0.8em;">F.12 Usage des Quantificateurs</h3>
+                                        <h3 style="font-size: 0.8em;">F.11 Usage des Quantificateurs</h3>
                                     </div>
                                     <div class="content-zone">
                                         <div class="text-zone" style="font-size: 0.7em;">
@@ -2545,8 +2537,7 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <p style="font-size: 0.6em;">Construction du langage OWL</p>
-                                        <h3 style="font-size: 0.8em;">F.13 Self, Value et Key</h3>
+                                        <h3 style="font-size: 0.8em;">F.12 Self, Value et Key</h3>
                                     </div>
                                     <div class="content-zone">
                                         <div class="text-zone">
@@ -2593,8 +2584,7 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <p style="font-size: 0.6em;">Construction d'une ontologie</p>
-                                        <h3 style="font-size: 0.8em;">F.14 Protégé: redondance de données et RDF
+                                        <h3 style="font-size: 0.8em;">F.13 Protégé: redondance de données et RDF
                                         </h3>
                                     </div>
                                     <div class="content-zone">
@@ -2669,7 +2659,7 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                        <h4 style="font-size: 0.8em;">F.15 Validation: Cohérence et Utilité</h4>
+                                        <h4 style="font-size: 0.8em;">F.14 Validation: Cohérence et Utilité</h4>
                                     </div>
                                     <div class="content-zone">
                                         <div class="text-zone">
